update job select
